[workspace]
members = ["nanvm-lib", "nanvm"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Sergey Shandar", "Denys Shandar"]
license = "GPL-3.0-or-later"
repository = "https://github.com/functionalscript/nanvm"

[workspace.dependencies]
wasm-bindgen-test = "0.3.41"
io-trait = "0.8.0"
io-test = "0.8.1"
io-impl = "0.8.1"
