[workspace]
members = ["nanvm-lib", "nanvm"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Sergey Shandar", "Denys Shandar"]
license = "GPL-3.0-or-later"
repository = "https://github.com/functionalscript/nanvm"

[workspace.dependencies]
nanvm-lib = { path = "nanvm-lib", version = "0.1.1" }
wasm-bindgen-test = "0.3.49"
io-trait = "0.11.0"
io-test = "0.11.0"
io-impl = "0.11.0"
