[package]
description = "NaN VM"
name = "nanvm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanvm-lib.workspace = true
io-impl.workspace = true
